# politics-qa

./: .env.example  .gitignore  LICENSE  README.md  bootstrap.sh  pyproject.toml
polqa/: cli.py  config.py
polqa/datasets/: politics_v1.jsonl
polqa/evaluation/: metrics.py  prompt_builder.py  runner.py  scoring.py
polqa/providers/: abacus_provider.py  base.py  claude_provider.py  dummy_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  xai_provider.py
polqa/reporting/: report_generator.py
polqa/reporting/templates/: report.html.j2  styles.css
tests/: test_force_mode.py  test_runner.py  test_scoring.py
